Kubernetes_Resources/k8s_istio_authorization_policy/istio-peer-authentication.policy.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: backend-peer-authentication
  namespace: backend
spec:
  mtls:
    mode: STRICT
